表示の最適化

--- a/index.html
+++ b/index.html
@@ -106,13 +106,13 @@
     <h2>Published Apps</h2>
 
     <div class="app-card">
-        <h3 class="app-title">MIRVID</h3>
+        <h3 class="app-title">MIRVID ― Mirror Video Player</h3>
         
         <div class="description-section">
             <span class="lang-label">JAPANESE</span>
             <p class="description-text">
-                機能を最小限に絞り動画再生に特化した「超シンプル」な操作性。
-                反転再生、ループ、速度調整、拡大・縮小など、動画チェックに本当に必要な機能だけを直感的に使えるビデオプレイヤーです。
+                機能を最小限に絞り、動画再生に特化した「超シンプル」な画面構成です。
+                反転再生、ループ再生、速度調整、拡大・縮小など、動画チェックに本当に必要な機能だけを直感的に使えるビデオプレイヤーを作成しました。
             </p>
         </div>
 
