表示の微修正

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="description-section">
             <span class="lang-label">JAPANESE</span>
             <p class="description-text">
-                機能を最小限に絞り、動画再生に特化した「超シンプル」な画面構成です。
+                機能を最小限に絞り、動画再生に特化した「超シンプル」な画面構成です。<br>
                 反転再生、ループ再生、速度調整、拡大・縮小など、動画チェックに本当に必要な機能だけを直感的に使えるビデオプレイヤーを作成しました。
             </p>
         </div>
@@ -121,7 +121,7 @@
         <div class="description-section">
             <span class="lang-label">ENGLISH</span>
             <p class="description-text">
-                An ultra-simple video player focused purely on playback functionality.
+                An ultra-simple video player focused purely on playback functionality.<br>
                 Equipped with essential features for detailed video analysis, including mirroring, looping, playback speed control, and zooming.
             </p>
         </div>
